Wrap iPad fix inside extra class

--- a/src/styles/scaffolding/base.less
+++ b/src/styles/scaffolding/base.less
@@ -4,6 +4,9 @@
 body,
 html{
   position: relative;
+}
+
+html.form-element-focused {
   -webkit-overflow-scrolling : touch !important;
   overflow: auto !important;
   overflow-x: hidden !important;
